--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,24 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 2em;
 }
+
+
+
+.carousel-item-next{
+  transition: transform 0s ease-in-out;
+}
+
+.carousel-item-prev{
+    transition: transform 0s ease-in-out;
+}
+.carousel-item-left {
+    transform: translateX(-100%);
+}
+.carousel-item-right {
+    transform: translateX(100%);
+}
+/*
+.carousel-item>img{
+    height: 500px;
+    width: 100%;
+}*/
