--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,14 @@
     height: 500px;
     width: 100%;
 }*/
+a{
+    color:black;
+    text-decoration: none;
+}
+
+a:hover,a:active{
+    text-decoration: underline;
+}
 
 #HomeCardImg{
     opacity: 0.8;
