--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,35 @@ a:hover,a:active{
 .modal-custom{
     height: 100vh;
 }
+
+.aspect-ratio-box{
+    overflow: hidden;
+    height: 0;
+    background-size: contain;
+    background-repeat: no-repeat;
+    padding-top: calc((300/1440)*100%);
+}
+
+.aspect-ratio-box-inside{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.sidebar{
+    margin: 0;
+    margin-left: 0.5em;
+    text-align: center;
+    padding: 0;
+    position: fixed;
+    height: 100%;
+    overflow: hidden;
+}
+
+@media screen and (max-width: 767px) {
+    .sidebar {
+      visibility: hidden;
+    }
+}
