--- a/src/App.css
+++ b/src/App.css
@@ -11,19 +11,24 @@ body{
     background-color: #343a40;
 }
 
+.bg-black{
+    background-color: black;
+}
+
 a{
-    color:black;
+    color:white;
     text-decoration: none;
 }
 
 a:hover,a:active{
-    text-decoration: underline;
+    color: white;
+    text-decoration: none;
 }
 
 .modal-custom{
     height: 100vh;
 }
-
+/*
 .aspect-ratio-box{
     overflow: hidden;
     height: 0;
@@ -43,10 +48,10 @@ a:hover,a:active{
     width: 100%;
     height: 100%;
 }
-
+*/
 .sidebar{
     margin: 0;
-    margin-left: 0.5em;
+    margin-left: 0;
     text-align: center;
     padding: 0;
     position: fixed;
@@ -77,5 +82,32 @@ a:hover,a:active{
     background-color: #212529;
 }
 .blog-item:hover{
-    background-color: #343a40;
+    background-color: #292c30;
+}
+
+.home-div{
+    height:85vh;
+    width:auto;
+    overflow: hidden;
+    background-color:black;
+}
+
+.home-link{
+    background-color: #031633;
+    width: 50%;
+    border: solid white;
+    border-width: 0.1rem;
+    border-radius:2rem;
+    padding: 0.75rem;
+    text-align: center;
+}
+
+.home-link:hover{
+    background-color: #052c65;
+    cursor: pointer;
+    transition: background-color 200ms;
+}
+
+.home-link:active{
+    background-color: #084298;
 }
