--- a/src/App.css
+++ b/src/App.css
@@ -50,12 +50,12 @@ a:hover,a:active{
 }
 */
 .sidebar{
-    margin: 0;
-    margin-left: 0;
+    margin  :2rem;
     text-align: center;
     padding: 0;
     position: fixed;
-    height: 100%;
+    right: 0;
+    bottom: 0;
     overflow: hidden;
 }
 
