--- a/src/App.css
+++ b/src/App.css
@@ -87,12 +87,9 @@ a:hover,a:active{
 }
 .blog-new-image{
     color: white;
-    min-height: 5rem;
+    min-height: 7rem;
 }
-.blog-new-image:hover{
-    font-size: 120%;
-    cursor: pointer;
-}
+
 
 .home-div{
     height:85vh;
@@ -132,7 +129,14 @@ a:hover,a:active{
 }
 
 .plus-sign{
-    width: 3rem;
-    background-color: #052c65;
+    height: 3.5rem;
+    width: 3.5rem;
+    background: linear-gradient(139.66deg, #57AAD9 14.32%, rgba(13, 135, 204, 0.37) 87.63%);
+    border: 1px solid #FFFFFF;
+    box-sizing: border-box;
     border-radius: 50%;
+}
+
+.plus-sign:hover{
+    box-shadow: 0px 4px 27px -2px #FFFFFF;
 }
