--- a/src/App.css
+++ b/src/App.css
@@ -1,125 +1,163 @@
-.navbar-brand{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 2em;
+.navbar-brand {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 2em;
 }
 
-body{
-    background-color: white;
+body {
+  background-color: white;
 }
 
-a{
-    color:black;
-    text-decoration: none;
+a {
+  color: black;
+  text-decoration: none;
 }
 
-a:hover,a:active{
-    color: black;
-    text-decoration: none;
+a:hover,
+a:active {
+  color: black;
+  text-decoration: none;
 }
 
 /*Background*/
-.bg-light-dark{
-    background-color: #343a40;
+.bg-light-dark {
+  background-color: #343a40;
 }
 
-.bg-black{
-    background-color: black;
+.bg-black {
+  background-color: black;
 }
 
 /*Gallery*/
-.modal-custom{
-    height: 100vh;
+.modal-custom {
+  height: 100vh;
 }
 
-.gallery-item{
-    background-color: transparent;
-}
-.gallery-item:hover,.gallery-item:active{
-    box-shadow: 0px 4px 7px 2px rgba(0, 0, 0, 0.66)
+.gallery-item {
+  background-color: transparent;
 }
 
-.mini-image:hover{
-    background-color:white ;
-    border: solid;
-    border-color: white;
+.gallery-item-title {
+  opacity: 0;
+}
+
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: row;
+}
+
+.flex-item {
+  margin: 1rem 0.5rem;
+}
+
+.gallery-image {
+  width: 100%;
+  border-radius: 0.2rem;
+}
+
+.gallery-item:hover .gallery-image {
+  transition: transform 400ms;
+  transform: scale(105%);
+}
+
+.gallery-item:hover .gallery-item-title {
+  transition: opacity 200ms;
+  opacity: 1;
 }
 
 /*Blog*/
-.blog-item{
-    background-color: white;
+.blog-item {
+  background-color: white;
 }
-.blog-item:hover{
-    background-color: #f1fcff;
+.blog-item:hover {
+  background-color: #f1fcff;
+  box-shadow: 0px 0px 12px 4px #f1fcff;
 }
-.blog-new-image{
-    min-height: 7rem;
-}
-.blog-new-image:hover{
-    background-color: white;
-}
-.blog-comment{
-    background-color: white;
-    border: solid black;
-    border-width: 0.1rem;
+.blog-new-image {
+  min-height: 7rem;
 }
 
-.blog-comment:hover{
-    background-color: rgb(246, 250, 250);
+.blog-mini-image {
+  border: solid;
+  border-color: black;
+  border-width: 1px;
 }
-.sidebar{
-    margin  :2rem;
-    text-align: center;
-    padding: 0;
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    overflow: hidden;
+
+.blog-mini-image:hover {
+  transition: transform 400ms;
+  transform: scale(104%);
+}
+
+.blog-comment {
+  background-color: white;
+  border: solid black;
+  border-width: 0.1rem;
+}
+
+.blog-comment:hover {
+  background-color: rgb(246, 250, 250);
+}
+.sidebar {
+  margin: 2rem;
+  text-align: center;
+  padding: 0;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 767px) {
-    .sidebar {
-      visibility: hidden;
-    }
+  .sidebar {
+    visibility: hidden;
+  }
 }
 
 /*Home*/
-.home-div{
-    height:85vh;
-    width:auto;
-    overflow: hidden;
-    background-color:white;
+.home-div {
+  height: 85vh;
+  width: auto;
+  overflow: hidden;
+  background-color: white;
 }
 
-.home-link{
-    background-color: #212529;
-    width: 50%;
-    border: solid black;
-    border-width: 0.1rem;
-    border-radius:2rem;
-    padding: 0.75rem;
-    text-align: center;
-    color: white;
+.home-link {
+  background-color: #212529;
+  width: 50%;
+  border: solid black;
+  border-width: 0.1rem;
+  border-radius: 2rem;
+  padding: 0.75rem;
+  text-align: center;
+  color: white;
 }
 
-.home-link:active{
-    background-color: #084298;
+.home-link:active {
+  background-color: #084298;
 }
-.home-link:hover{
-    background-color: #052c65;
-    cursor: pointer;
-    transition: background-color 200ms;
+.home-link:hover {
+  background-color: #052c65;
+  cursor: pointer;
+  transition: background-color 200ms;
 }
 
 /*New Item Button*/
-.plus-sign{
-    height: 3.5rem;
-    width: 3.5rem;
-    background: linear-gradient(139.66deg, #57AAD9 14.32%, rgba(13, 135, 204, 0.37) 87.63%);
-    border: 1px solid #FFFFFF;
-    box-sizing: border-box;
-    border-radius: 50%;
+.plus-sign {
+  height: 3.5rem;
+  width: 3.5rem;
+  background: linear-gradient(
+    139.66deg,
+    #57aad9 14.32%,
+    rgba(13, 135, 204, 0.37) 87.63%
+  );
+  border: 1px solid #ffffff;
+  box-sizing: border-box;
+  border-radius: 50%;
 }
 
-.plus-sign:hover{
-    box-shadow: 0px 4px 27px -2px #87e2fc;
+.plus-sign:hover {
+  box-shadow: 0px 4px 27px -2px #87e2fc;
 }
